FIx search form dark mode color scheme

--- a/css/sou_night.css
+++ b/css/sou_night.css
@@ -132,6 +132,10 @@ a {
     opacity: 0.7
 }
 
+input.wd {
+    color: #b5b2b2;
+}
+
 .con .sou form .wd {
     width: 100%;
     height: 100%;
